Changes for java 8