@@ -2,6 +2,7 @@ package ru.javawebinar.topjava;
 
 import org.springframework.test.web.servlet.ResultMatcher;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -26,7 +27,7 @@ public class TestMatcher<T> {
 
     @SafeVarargs
     public final void assertMatch(Iterable<T> actual, T... expected) {
-        assertMatch(actual, List.of(expected));
+        assertMatch(actual, Arrays.asList(expected));
     }
 
     public void assertMatch(Iterable<T> actual, Iterable<T> expected) {
@@ -39,7 +40,7 @@ public class TestMatcher<T> {
 
     @SafeVarargs
     public final ResultMatcher contentJson(T... expected) {
-        return contentJson(List.of(expected));
+        return contentJson(Arrays.asList(expected));
     }
 
     public ResultMatcher contentJson(Iterable<T> expected) {
